<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="250dp"
        android:gravity="end|bottom"
        android:onClick="onDigit"
        android:text="@string/number"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/seven"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/eight"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/nine"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/division"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/four"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/five"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/six"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/Multiply"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/one"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/two"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/three"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/subtraction"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/zero"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onClear"
            android:text="@string/clr"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/add"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/result"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</LinearLayout>